testsuite/tests/v1/un_op/arith/minus/non_int/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:2:8 ]
   │
 2 │ print(-s)
   │        ┬  
   │        ╰── Expecting a "Int", got a "Str"
───╯
